fix(layout): reduce left padding on tablets

--- a/main/http_server/axe-os/src/app/layout/styles/layout/_content.scss
+++ b/main/http_server/axe-os/src/app/layout/styles/layout/_content.scss
@@ -6,7 +6,7 @@
     padding: 7rem 2rem 2rem 4rem;
     transition: margin-left $transitionDuration;
 
-    @media (max-width: 768px) {
+    @media (max-width: 991px) {
         padding: 7rem 1rem 1rem 1rem;
     }
 }
